--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>OVO Albums API</title>
   <link rel="stylesheet" href="/styles.css">
+  
+
 </head>
 <body>
 
@@ -18,6 +20,7 @@
         <li><a href="/api">API Index</a></li>
         <li><a href="/api/albums">All Albums</a></li>
         <li><a href="/api/albums/1">Album #1</a></li>
+        <li><a href="/all-images.html">All Images</a></li>
       </ul>
     </div>
 
